--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ main {
 .plans_container-slider {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    gap: 30px;
 }
 
 .plans_container-card .plans_container-target {
